fix hero image overspill on mobile device

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,6 +129,7 @@ footer a {
 /* responsive design - small - max-width 640px*/
 @media screen and (max-width: 640px) {
     header, footer {
+        width: 100%;
         min-height: 40px;
     }
 
